--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,33 +14,29 @@ dependencies:
   # State Management
   get: ^4.6.6
 
-  # Firebase
-  firebase_core: ^2.24.0
-  firebase_firestore: ^4.13.0
-  firebase_auth: ^4.15.0
-  firebase_storage: ^11.5.0
+  # Local Database & Storage
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  path_provider: ^2.1.1 # Untuk menyimpan gambar/audio secara lokal
 
   # Image & Camera
   image_picker: ^1.0.4
-  flutter_image_compress: ^2.1.0
+  # flutter_image_compress: ... (opsional)
 
-  # Maps & Location
+  # Maps & Location (Tetap)
   google_maps_flutter: ^2.5.0
   geolocator: ^9.0.2
   geocoding: ^2.1.0
 
-  # Audio
+  # Audio (Tetap)
   audioplayers: ^5.2.0
   record: ^4.4.4
 
-  # UI & Date/Time
+  # UI Utilities (Tetap)
   intl: ^0.19.0
   cupertino_icons: ^1.0.2
-  cached_network_image: ^3.3.0
-
-  # Utilities
+  cached_network_image: ^3.3.0 # Note: Ini mungkin perlu diganti Image.file untuk lokal
   uuid: ^4.0.0
-  permission_handler: ^11.4.4
 
 dev_dependencies:
   flutter_test:
