--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,15 @@ dependencies:
 
   # Audio (UPDATE VERSI INI)
   audioplayers: ^5.2.0
-  record: ^5.0.0
+  record: ^6.1.2
 
   # UI Utilities
   intl: ^0.19.0
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.3.0
   uuid: ^4.0.0
+  flutter_staggered_grid_view: ^0.7.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
